# lscache-django

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lscache.yml
src/django_lscache/: __init__.py  apps.py  conf.py  decorators.py  middleware.py  purging.py
src/django_lscache/management/commands/: lscache_purge_all.py
tests/: test_lscache.py
