[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lscache"
version = "0.1.0"
description = "LiteSpeed Cache integration for Django"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Cold Egg"}
]
requires-python = ">=3.8"

dependencies = [
  "Django>=3.2",
  "requests>=2.25"
]

classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Code-Egg/django-lscache"
Documentation = "https://github.com/Code-Egg/django-lscache"
Issues = "https://github.com/Code-Egg/django-lscache/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
