[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lscache"
version = "0.1.1"
description = "LiteSpeed Cache integration for Django"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["lscache", "cache", "django"]

authors = [
  { name = "Cold Egg" }
]

dependencies = [
  "Django>=3.2",
  "requests>=2.25"
]

classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Code-Egg/django-lscache"
Documentation = "https://github.com/Code-Egg/django-lscache/blob/main/README.md"
Issues = "https://github.com/Code-Egg/django-lscache/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
license-files = ["LICENSE"]
